--- a/Source/WPF/MyMoney/Themes/Dark.xaml
+++ b/Source/WPF/MyMoney/Themes/Dark.xaml
@@ -18,12 +18,18 @@
 
 
     <!-- colors for list selection -->
-    <SolidColorBrush x:Key="ListItemForegroundBrush" Color="white"/>
+    <SolidColorBrush x:Key="ListItemForegroundBrush" Color="White"/>
+    <SolidColorBrush x:Key="ListItemForegroundLowBrush" Color="#E0E0E0"/> 
+    <SolidColorBrush x:Key="ListItemSelectedForegroundDisabledBrush" Color="Gray"/>
+    <SolidColorBrush x:Key="ListItemSelectedForegroundNegativeBrush" Color="Firebrick"/>
     <SolidColorBrush x:Key="ListItemSelectedForegroundBrush" Color="white"/>
+    <SolidColorBrush x:Key="ListItemSelectedForegroundLowBrush" Color="white"/>
+    
     <SolidColorBrush x:Key="ListItemSelectedBackgroundBrush" Color="{m:DynamicColor SystemAccentColor}" Opacity="0.6"/>
     <SolidColorBrush x:Key="ListItemSelectedBackgroundMouseOverBrush" Color="{m:DynamicColor SystemAccentColor}" Opacity="0.8"/>
     <SolidColorBrush x:Key="ListItemSelectedBorderBrush" Color="Transparent"/>
     <SolidColorBrush x:Key="ListItemSelectedHoverBrush" Color="#3e3e3e"/>
+    <SolidColorBrush x:Key="ListItemReconcilingBackgroundBrush" Color="#A0275627"/> 
 
     <SolidColorBrush x:Key="GridNormalBackgroundBrush" Color="#2e2e2e"/>
     <SolidColorBrush x:Key="GridAlternateBackgroundBrush" Color="#1e1e1e"/>
@@ -61,5 +67,21 @@
     <SolidColorBrush x:Key="TransactionConnectorButtonPressedBackground" Color="#1e1e1e" />
     <SolidColorBrush x:Key="TransactionConnectorButtonMouseOverBackground" Color="#3e3e3e" />
 
+
+    <Style x:Key="NumericTextBoxStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource DefaultTextBoxStyle}">
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="white"/>
+        <Setter Property="controls:CalculatorPopup.CalculatorEnabled" Value="True" />
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="Background" Value="Firebrick"/>
+                <Setter Property="ToolTip" 
+                          Value="{Binding RelativeSource={RelativeSource Self},
+                          Path=(Validation.Errors)[0].ErrorContent}"/>
+            </Trigger>
+        </Style.Triggers>
+
+    </Style>
 
 </ResourceDictionary>
