--- a/Source/WPF/MyMoney/Themes/Light.xaml
+++ b/Source/WPF/MyMoney/Themes/Light.xaml
@@ -18,12 +18,18 @@
 
     
     <!-- colors for list selection -->
-    <SolidColorBrush x:Key="ListItemForegroundBrush" Color="black"/>
+    <SolidColorBrush x:Key="ListItemForegroundBrush" Color="#1e1e1e"/>
+    <SolidColorBrush x:Key="ListItemForegroundLowBrush" Color="black"/>
+    <SolidColorBrush x:Key="ListItemSelectedForegroundDisabledBrush" Color="Gray"/>
+    <SolidColorBrush x:Key="ListItemSelectedForegroundNegativeBrush" Color="Red"/>
     <SolidColorBrush x:Key="ListItemSelectedForegroundBrush" Color="white"/>
+    <SolidColorBrush x:Key="ListItemSelectedForegroundLowBrush" Color="#F0F0F0"/>
+    
     <SolidColorBrush x:Key="ListItemSelectedBackgroundBrush" Color="{m:DynamicColor SystemAccentColor}"  Opacity="0.6"/>
     <SolidColorBrush x:Key="ListItemSelectedBackgroundMouseOverBrush" Color="{m:DynamicColor SystemAccentColor}" Opacity="0.8"/>
     <SolidColorBrush x:Key="ListItemSelectedBorderBrush" Color="Transparent"/>
     <SolidColorBrush x:Key="ListItemSelectedHoverBrush" Color="#F0F0F0"/>
+    <SolidColorBrush x:Key="ListItemReconcilingBackgroundBrush" Color="#A0419441"/>
 
     <SolidColorBrush x:Key="GridNormalBackgroundBrush" Color="white"/>
     <SolidColorBrush x:Key="GridAlternateBackgroundBrush" Color="#e0e0e0"/>
@@ -60,5 +66,21 @@
     <SolidColorBrush x:Key="TransactionConnectorButtonPressedBackground" Color="#d0d0d0" />
     <SolidColorBrush x:Key="TransactionConnectorButtonMouseOverBackground" Color="white" />
 
+
+    <Style x:Key="NumericTextBoxStyle" TargetType="{x:Type TextBox}" BasedOn="{StaticResource DefaultTextBoxStyle}">
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="black"/>
+        <Setter Property="controls:CalculatorPopup.CalculatorEnabled" Value="True" />
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="Background" Value="Red"/>
+                <Setter Property="ToolTip" 
+                          Value="{Binding RelativeSource={RelativeSource Self},
+                          Path=(Validation.Errors)[0].ErrorContent}"/>
+            </Trigger>
+        </Style.Triggers>
+
+    </Style>
 
 </ResourceDictionary>
